# vibrava

./: .gitignore  CLAUDE.md  Makefile  README.md  config.toml.example  eleven-labs-voice.txt  notes.md  pyproject.toml
.claude/commands/: script.md
editor/: app.py
editor2/: app.js  index.html  server.py  style.css
scripts/: bear-ai-announcement.json  benny-cow-spaghetti-foe.json  big-phone-office.json  cat_story_example.json  evil-snippar-guys.json  fallen-out-of-bed-2.json  fallen-out-of-bed.json  henlo-stinky.json  other-cat-betrayal.json  pushup-reminder-2.json  pushup-reminder.json
tagger/: app.py
tagger2/: PLAN.md  app.js  index.html  server.py  style.css
vibrava/: cli.py  config.py  pipeline.py
vibrava/audio/: elevenlabs.py  fx.py  gemini.py  tiktok.py  tts.py
vibrava/clips/: index.py
vibrava/compose/: editor.py
