[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibrava"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=1.0.0",
    "moviepy>=1.0.3,<2.0",
    "pillow>=10.0.0",
    "streamlit>=1.35.0",
]

[project.scripts]
vibrava = "vibrava.cli:main"
