[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibrava"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "elevenlabs>=1.0.0",
    "google-genai>=1.0.0",
    "moviepy>=1.0.3,<2.0",
    "pillow>=10.0.0",
    "streamlit>=1.35.0",
    "tiktok-voice",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.scripts]
vibrava = "vibrava.cli:main"

[tool.uv.sources]
tiktok-voice = { path = "../tiktok-voice", editable = true }
